# Nbody-parallel

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Report/: clean.bat  references.bib  report.tex
Report/sourceCode/: omp.cpp
common/: Constants.h  Timer.h  Util.h
src/cuda/: Body.cpp  Body.h  Kernels.cu  Kernels.cuh  Simulation.cpp  Simulation.h
src/mpi/: Simulation.cpp  Simulation.h
src/openmp/: Body.cpp  Body.h  Simulation.cpp  Simulation.h
src/sequential/: Body.cpp  Body.h  Simulation.cpp  Simulation.h  main.cpp
